--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>Quill Utility Tools</title>
@@ -108,7 +109,7 @@
     </div>
 
     <!-- Tool 3 -->
-     <div class="tool-card">
+    <div class="tool-card">
       <div class="tool-title">HTML → String</div>
       <div class="tool-desc">
         Convert raw HTML into a single escaped string suitable for JSON request
@@ -118,7 +119,7 @@
         Open Tool
       </button>
     </div>
-    
+
     <!-- Tool 4 -->
     <div class="tool-card">
       <div class="tool-title">Delta → HTML (Preview)</div>
@@ -145,8 +146,10 @@
   </div>
 
   <footer>
-    Local utility tools • No data is sent to any server
+    This tool is provided for internal use only and is offered “as is”,
+    without any warranties. No user data is collected or stored.
   </footer>
+
 
   <script>
     function openTool(fileName) {
@@ -154,4 +157,5 @@
     }
   </script>
 </body>
+
 </html>
